--- a/styles/style.css
+++ b/styles/style.css
@@ -4,27 +4,11 @@
 
 /* Custom styles here */
 body {
-    display: flex;
-    height: 100vh;
     margin: 0px;
-  }
-  
-  .mdc-drawer-app-content {
-    flex: auto;
-    overflow: auto;
-    position: relative;
-  }
-  
-  .main-content {
-    overflow: auto;
-    height: 100%;
-  }
-  
-  .app-bar {
     position: absolute;
   }
   
-  // Only apply this style if below top app bar.
-  .mdc-top-app-bar {
-    z-index: 7;
+  .main-content {
+    padding: 16px;
+    margin-top: 60px;
   }
